<resources>

    <string name="app_name">LocationToChild</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">儿童定位</string>
    
    <!-- bottom_tab -->
    <string name="tab_home">首页</string>
    <string name="tab_map">地图</string>
    <string name="tab_alarm">提醒</string>
    <string name="tab_more">更多</string>
    
    <!-- title -->
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="title_init">初始设置</string>
    <string name="title_setting">设置</string>
    <string name="title_sync">上传设置信息</string>
    
    <!-- login&register -->
    <string name="telephone_string">手机号</string>
    <string name="password_string" >密码</string>
    <string name="register_str">注册号码</string>
    <string name="find_pwd_str">忘记密码</string>
    <string name="input_number">1234567890</string>
    <string name="hint_phone">输入手机号</string>
    <string name="hint_pwd">输入密码</string>
    <string name="hint_againpwd">确认密码</string>
    <string name="hint_email">邮箱</string>
    <string name="text_email">设置找回密码验证邮箱</string>
    <string name="register_btn_str">确认注册</string>
    
    <!-- 初始设置 -->
    <string name="next_str">下一步</string>
    <string name="watch_str">请输入需要绑定的手表号码</string>
    <string name="family_str">设置亲情号，至少一个，最多三个</string>
    <string name="family_help">*提示:亲情号用于SOS求救时，手表自动轮询拨打的号码</string>
    <string name="centre_str">设置中心号码</string>
	<string name="centre_help">*提示：中心号码需为亲情号码之一</string>
	<string name="sync_again">再次上传</string>
    <!-- 首页 -->
    <string name="go_map_string">地图查看</string>
    <string name="start_location_string">立即获取位置</string>
    
      <!-- 更多 -->
	<string name="more_about">关于</string>
    <string name="more_help">常见问题</string>
    <string name="more_feedback">反馈</string>
    <!-- 展示界面 -->
    <string name="recently_location_str">上次：%1$s</string>
    <string name="recently_time_str">时间：%1$s</string>
    
  <!--  设置标题相关 --> 
  <string name="setting_title">设置</string> 
  <string name="device_key_title">设备密码</string> 
  <string name="tele_qq_title">亲情号码</string> 
  <string name="tele_center_title">中心号码</string> 
  <string name="tele_device_title">设备号码</string> 
  <string name="wall_title">电子围栏</string> 
  <string name="setting_submit">保存更改</string> 
  <string name="setting_on">开</string> 
  <string name="setting_off">关</string>
  <!--  设置主片段相关  --> 
  <string name="setting_main_custom">常规设置</string> 
  <string name="setting_main_telephone">号码设置</string> 
  <string name="setting_main_gps">GPS定位</string> 
  <string name="setting_main_wall">电子围栏</string> 
  <string name="setting_main_telecenter">中心号码</string> 
  <string name="setting_main_teleqq">亲情号码</string> 
  <string name="setting_main_teledevice">设备号码</string> 
  <string name="setting_main_devicekey">设备密码</string>
  <!--  中心号码片段相关 --> 
  <string name="setting_telecenter_current">当前中心号码</string> 
  <string name="setting_telecenter_qq">亲情号:</string>
  <!--  设备号码片段相关 --> 
  <string name="setting_teledevice_current">当前设备号码</string> 
  <string name="setting_teledevice_new">新号码</string>
  <!--  亲情号码片段相关  --> 
  <string name="setting_teleqq_new1">亲情号1</string> 
  <string name="setting_teleqq_new2">亲情号2</string> 
  <string name="setting_teleqq_new3">亲情号3</string>
  <!--  设备密码片段相关 --> 
  <string name="setting_key_old">当前密码</string> 
  <string name="setting_key_new">新密码</string> 
  <string name="setting_key_new1">确认新密码</string>
  <!--  alarm_fragment  --> 
  <string name="setting_alarm_title">提醒服务</string>
  <!-- add alarm_setting --> 
  <string name="setting_add_title">添加提醒</string> 
  <string name="setting_add_time">08:00</string> 
  <string name="setting_add_mon">周一</string> 
  <string name="setting_add_tus">周二</string> 
  <string name="setting_add_wen">周三</string> 
  <string name="setting_add_thu">周四</string> 
  <string name="setting_add_fri">周五</string> 
  <string name="setting_add_sat">周六</string> 
  <string name="setting_add_sun">周日</string> 
  <string name="setting_add_workday">工作日</string> 
  <string name="setting_add_weekend">周末</string> 
  <string name="setting_add_free">自定义</string> 
  <string name="setting_add_type">提醒周期:</string> 
  <string name="setting_add_tip">(点击修改时间)</string> 
  <string name="setting_add_submit">保存</string> 
  <string name="setting_add_delete">删除</string> 
  <string name="setting_add_cancel">取消</string> 
    
</resources>